...
            android:title="Log Out" />

        <!--
        <item
            android:id="@+id/nav_create_recipe"
            android:icon="@drawable/pencil"
            android:title="Create new recipe" />
        <item
            android:id="@+id/nav_import_recipe"
            android:icon="@drawable/importrecipe"
            android:title="Import recipe from web" />
        <item
            android:id="@+id/nav_settings"
...
